--- a/pages/inspiracion.html
+++ b/pages/inspiracion.html
@@ -15,18 +15,12 @@
                 </ul>
             </div>
             <div id="header">
-                <h1> Ingresar </h1>
+                <h1> Inspiracion </h1>
                 </div>
             <div id="content"> 
-                <form>
-                    Nombre de usuario
-                    <input type="text" placeholder="Ingrese su nombre de usuario" name="Nombre de usuario"> 
-                    <br> <br>
-                    Contraseña 
-                    <input type="password" name="contraseña">
-                    <br> <br>
-                    <button type="submit"> Ingresar </button>
-                </form>
+                <img src="https://i.pinimg.com/564x/06/b3/5e/06b35e61acfbd920fc2c19b03b0cb26e.jpg">
+              <br> <br> <br> <br>
+                <img src="https://i.pinimg.com/564x/76/a1/7f/76a17f3e180f82884aff41851cb0fe7c.jpg">
                 
             </div>
         </div>
