--- a/pages/tutoriales.html
+++ b/pages/tutoriales.html
@@ -15,18 +15,12 @@
                 </ul>
             </div>
             <div id="header">
-                <h1> Ingresar </h1>
+                <h1> Tutoriales </h1>
                 </div>
             <div id="content"> 
-                <form>
-                    Nombre de usuario
-                    <input type="text" placeholder="Ingrese su nombre de usuario" name="Nombre de usuario"> 
-                    <br> <br>
-                    Contraseña 
-                    <input type="password" name="contraseña">
-                    <br> <br>
-                    <button type="submit"> Ingresar </button>
-                </form>
+                <img src="https://i.pinimg.com/564x/27/b2/8f/27b28f20783b4428d3ac85c2d1c697e6.jpg" alt="tutorial maquillaje">
+                <br> <br> <br> <br>
+                <img src="https://i.pinimg.com/564x/2c/a6/99/2ca6990cb0e949b48a019c667a03e2ce.jpg">
                 
             </div>
         </div>
